tests/fixtures/valid/ValidUseStatementOrderingConstImports.php
<?php

declare(strict_types=1);

namespace App\Fixtures\UseOrderingConsts;

use const Vendor\Cnst\CONST_A;
use const Vendor\Cnst\CONST_B;

/**
 * Positive: constant-only use imports sorted alphabetically by fully-qualified name.
 */
final class ValidUseStatementOrderingConstImports
{
}
